Entrega final desafio 1

--- a/Meet&Coffe/index.html
+++ b/Meet&Coffe/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Meet & Coffee</title>
-	 
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
+	<meta charset="utf-8">
+	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 	<meta name="author" content="Francisca Medina Concha">
 	<meta name="description" content="Comparte tus conocimientos tomando café">
 	<meta name="keywords" content="charlas, eventos, simposios, tecnología, co-work">
@@ -21,7 +21,7 @@
 			<li><a href="#proxima-charla">Próxima Charla</a> </li>
 			<li><a href="#eventos">Eventos anteriores</a></li>
 			<li><a href="#contacto">Contacto</a></li>
-		</ul>
+		</ul> 
 	</nav>
 
   <header id="inicio" class="hero-section">
@@ -51,8 +51,8 @@
   <section id="eventos">
   	<h2>Eventos anteriores</h2>
 		<article class="evento">
-			<img src="assets/img/simposio-vegan.jpg" alt="Events simposio vegan">
-			<h3>Simposio Vegan DB</h3>
+		<img src="assets/img/simposio-vegan.jpg" alt="Events simposio vegan">
+		<h3><a href="Evento01.html">Simposio Vegan DB</a></h3>
 		</article>
 
 		<article class="evento">
