--- a/Notas finales-MariaDuno/Index.html
+++ b/Notas finales-MariaDuno/Index.html
@@ -9,7 +9,7 @@
     <Body>
         <header>
             <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
                   <a class="navbar-brand" href="#">NOTAS FINALES</a>
                 </nav>
               </div>
